manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: outoftheparkacr.azurecr.io/gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 80 
              name: http
            - containerPort: 443
              name: https
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: gateway-deployment
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30135
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30136
  selector:
    app: gateway
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: outoftheparkcluster-dns-e263abe0.hcp.southcentralus.azmk8s.io
    http:
      paths:
      - backend:
          serviceName: gateway-deployment
          servicePort: 80
        path: /(/|$)(.*)
      - backend:
          serviceName: gateway-deployment
          servicePort: 443
        path: /(/|$)(.*)
