manifests/service.yml

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: outoftheparkcluster-dns-e263abe0.hcp.southcentralus.azmk8s.io
    http:
      paths:
      - backend:
          serviceName: gateway-deployment
          servicePort: 80
        path: /(/|$)(.*)
      - backend:
          serviceName: gateway-deployment
          servicePort: 443
        path: /(/|$)(.*)
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: external-lb
  namespace: default
spec:
  controller: ingress-nginx-controller
  parameters:
    kind: IngressParameters
    name: external-lb
